--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-2FROM ubuntu
+FROM ubuntu
 MAINTAINER Dan McDougall <daniel.mcdougall@liftoffsoftware.com>
 
 ENV GATEONE_REPO_URL https://github.com/liftoff/GateOne.git
